<resources>
    <string name="app_name">TwitchAppRxJava</string>

    <string name="scr_games_rate_app_btn">Оценить приложение</string>

    <string name="scr_rating_write_report_btn">Напишите отзыв…</string>
    <string name="scr_rating_send_report_btn">отправить отзыв</string>
    <string name="scr_rating_back_btn">назад</string>
    <string name="scr_rating_toast_text">Rating: %1$s</string>

    <string name="scr_favorite_game_view_holder_gameName">%1$s</string>

    <string name="scr_favorite_game_list_item_gameName">Channels: %1$s</string>
    <string name="scr_favorite_game_list_item_watchersCount">Watchers: %1$s</string>

    <string name="scr_favorite_game_item_icon">favorite game icon</string>

    <string name="scr_game_layout_followers_tv">followers: %1$s</string>
    <string name="scr_game_layout_image_game_description">image_game</string>
    <string name="scr_game_layout_like_image_description">like_image</string>

    <string name="scr_game_item_icon_description">game icon</string>

    <string name="scr_bottom_nav_all">All</string>
    <string name="scr_bottom_nav_favorite">Favorite</string>

    <string name="scr_followers_item_icon_description">follower_icon</string>

    <string name="scr_base_fragment_connection_error">Подключение к интернету отсутствует</string>


</resources>